Updated ServerFacade methods to URI instead of depreciated URL.